--- a/index.html
+++ b/index.html
@@ -4,9 +4,23 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Banana Speak</title>
+    <style>
+      textarea {
+        width: 40%;
+        height: 10vh;
+        display: block;
+        margin: 0.5rem;
+        padding: 1.5rem;
+      }
+    </style>
   </head>
   <body>
     <h1>Talk Banana</h1>
+    <textarea
+      id="txt-input"
+      placeholder="put your sentence in english and we will convert it to banana"
+    ></textarea>
+    <button id="btn-translate">Translate</button>
     <script src="app.js" type="text/javascript"></script>
   </body>
 </html>
